k8s/04-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: weather-app
spec:
  selector:
    app: backend
  ports:
    - name: mapped
      port: 5000
      targetPort: 8080
    - name: container-native
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: weather-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: weather-backend:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
